# fedbadges

./: .cico.pipeline  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  Vagrantfile  fedbadges.toml  fedbadges.toml.example  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: main.yml
.s2i/: environment  run.sh
devel/: create-test-data.py
devel/ansible/: playbook.yml  vars.yml
devel/ansible/consumer/tasks/: main.yml
devel/ansible/roles/dev/files/: bashrc  config.toml  development.ini  fedbadges.service  tahrir.service
devel/ansible/roles/dev/tasks/: main.yml
devel/ansible/roles/gss-proxy/defaults/: main.yml
devel/ansible/roles/gss-proxy/tasks/: main.yml
devel/ansible/roles/gss-proxy/templates/: gssproxy.conf
devel/ansible/roles/ipa-client/defaults/: main.yml
devel/ansible/roles/ipa-client/tasks/: main.yml
diagrams/: README.rst  diagram.txt
fedbadges/: aio.py  commands.py  consumer.py  consumers.py  models.py  rules.py  rulesrepo.py  utils.py
fedbadges/commands/: badges.py
fedbadges/consumers/: ExampleBadge.py  badges.py  yamlconsumer.py
fedbadges/consumers/badges/: __init__.py
fedbadges/manual/: badges_dev.py  group_membership.py  libravatar.py  lifecycle.py  mirror.py  utils.py
fedmsg.d/: badges-global.py  datanommer.py  endpoints.py  example-badge.py
tests/: test_complicated_recipient.py  test_complicated_trigger.py  test_criteria.py  test_criteria_datanommer.py  test_criteria_pkgdb.py  test_rule_matching.py  test_triggers.py  test_utils.py  test_yaml_collector.py  utils.py
tests/test_badges/: bodhi-update-fancy.yaml  bodhi-update-simple.yaml  pagure-long-live.yaml  tagger-01.yml
tests/test_badges/rules/: irc-speak-up.yml
